# embedded-examples

./: .gitmodules  build.sc
extension_examples/math-lib/: .gitignore  build.sbt
extension_examples/math-lib/math-library/src/aadl/: .project
extension_examples/math-lib/math-library/src/aadl/.slang/: Math_Library_Math_System_i_Instance.json
extension_examples/math-lib/math-library/src/aadl/aadl/: Math_Library.aadl
extension_examples/math-lib/math-library/src/c/: CMakeLists.txt  typemap.properties
extension_examples/math-lib/math-library/src/c/app-Main/: Main.c
extension_examples/math-lib/math-library/src/c/app-Math_Thread_i_App/: Math_Thread_i_App.c
extension_examples/math-lib/math-library/src/c/ext/: ext.c  ipc.c
extension_examples/math-lib/math-library/src/c/runtime/: all.c  all.h  misc.c  misc.h  stackframe.c  type-composite.h  types.c  types.h  ztype.h
extension_examples/math-lib/math-library/src/main/art/: Art.scala
firmata-examples/firmata4j/building-control-mixed/: .gitignore  readme.md
firmata-examples/firmata4j/building-control-mixed/aadl/: .project  .system
firmata-examples/firmata4j/building-control-mixed/aadl/.slang/: BuildingControl_BuildingControlDemo_i_Instance.json
firmata-examples/firmata4j/building-control-mixed/hamr/slang/: versions.properties
firmata-examples/firmata4j/off_on/aadl/: .gitignore  .project
firmata-examples/firmata4j/off_on/hamr/slang/: versions.properties
stm32-examples/BuildingController/: .cproject  .mxproject  .project  BuildingController.ioc  CMakeLists.txt  CMakeLists_template.txt
stm32-examples/BuildingController/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32-examples/BuildingController/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
stm32-examples/BuildingController_slang/: build.sbt
stm32-examples/BuildingController_slang/building_control/src/aadl/: .gitignore  .project
stm32-examples/BuildingController_slang/building_control/src/aadl/.slang/: BuildingControl_BuildingControlDemo_i_Instance.json
stm32-examples/BuildingController_slang/building_control/src/aadl/diagrams/: BuildingControl_BuildingControlDemo_i.aadl_diagram
stm32-examples/BuildingController_slang/building_control/src/aadl/instances/: BuildingControl_BuildingControlDemo_i_Instance.aaxl2
stm32-examples/BuildingController_slang/building_control/src/c/: CMakeLists.txt  typemap.properties
stm32-examples/BuildingController_slang/building_control/src/c/app-Fan_i_App/: Fan_i_App.c
stm32-examples/BuildingController_slang/building_control/src/c/app-Main/: Main.c
stm32-examples/BuildingController_slang/building_control/src/c/app-TempControl_i_App/: TempControl_i_App.c
stm32-examples/BuildingController_slang/building_control/src/c/app-TempSensor_i_App/: TempSensor_i_App.c
stm32-examples/BuildingController_slang/building_control/src/c/ext/: ext.c  ipc.c
stm32-examples/BuildingController_slang/building_control/src/c/runtime/: all.c  all.h  stackframe.h  type-composite.h  type.h  types.c  types.h  ztype.h
stm32-examples/BuildingController_slang/building_control/src/main/art/: ArchitectureDescription.scala  Art.scala  ArtDebug_Ext.scala  ArtNative_Ext.scala
stm32-examples/BuildingController_slang/building_control/src/stm32_f407g/: .cproject  .mxproject  .project  CMakeLists.txt  stm32_f407g.ioc
stm32-examples/BuildingController_slang/building_control/src/stm32_f407g/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  (+1 more)
stm32-examples/BuildingController_slang/building_control/src/stm32_f429_rtos/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  stm32_f429_rtos.ioc
stm32-examples/LED-Blink/: .cproject  .mxproject  .project  CMakeLists.txt  LED-Blink.ioc
stm32-examples/LED-Blink/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32-examples/LED-Blink/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
stm32-examples/PingPong/: build.sbt
stm32-examples/PingPong/proj/src/aadl/: .project
stm32-examples/PingPong/proj/src/c/: CMakeLists.txt  typemap.properties
stm32-examples/PingPong/proj/src/c/app-Main/: Main.c
stm32-examples/PingPong/proj/src/c/app-Ping_i_App/: Ping_i_App.c
stm32-examples/PingPong/proj/src/c/app-Pong_i_App/: Pong_i_App.c
stm32-examples/PingPong/proj/src/c/ext/: ext.c  ipc.c  ipc.h
stm32-examples/PingPong/proj/src/c/runtime/: all.c  all.h  type-composite.h  types.c  types.h
stm32-examples/PingPong/proj/src/stm32/: .cproject  .mxproject  CMakeLists.txt  CMakeLists_template.txt  ping_pong.ioc  stm32.ioc
stm32-examples/PingPong/proj/src/stm32-f407-nortos/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  stm32-f407-nortos.ioc
stm32-examples/PingPong/proj/src/stm32-f429-rtos/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  stm32-f429-rtos.ioc
stm32-examples/PingPong/proj/src/stm32-nortos/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  nortos.ioc
stm32-examples/SevenSegment/: .cproject  .mxproject  CMakeLists_template.txt
stm32-examples/SevenSegment/FourDigitSevenSegment/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  FourDigitSevenSegement.ioc  nucleo_f4.cfg  readme.md
stm32-examples/SevenSegment/FourDigitSevenSegment/Inc/: main.h  stm32f4xx_hal_conf.h
stm32-examples/SevenSegment/FourDigitSevenSegment/Src/: main.c  stm32f4xx_hal_msp.c
stm32-examples/SevenSegment/Inc/: main.h
stm32-examples/SevenSegment/SevenSegmentShifter/: .mxproject  CMakeLists.txt
stm32-examples/SevenSegment/SevenSegmentShifter/Inc/: stm32f4xx_it.h
stm32-examples/SevenSegment/SevenSegmentShifter/Src/: main.c
stm32-examples/SevenSegment/SevenSegment_x/: .project  CMakeLists.txt  readme.md  sevenseg.ioc
stm32-examples/SevenSegment/SevenSegment_x/Src/: main.c  stm32f4xx_it.c
stm32-examples/SevenSegment/Src/: main.c
stm32-examples/SevenSegmentShifter/: .cproject  .project  SevenSegmentShifter.ioc  readme.md
stm32-examples/SevenSegmentShifter/Inc/: main.h
stm32-examples/SevenSegmentShifter/Src/: main.c
(+168 files in other folders)
